Add custom handlers

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="css/screen.css" rel="stylesheet" type="text/css">
 	<link href="css/print.css" rel="stylesheet"  type="text/css">
 	<script src="js/paged.polyfill.js"></script>
+	<script src="js/customHandler.js"></script>
 </head>
 <body>
 	<section class="chapter" id="chapter-1">
