--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<p>Various forms of Aurora may be recognized in the passages from Chap. xiv.; while in those from Chap. xv. a careful distinction is drawn between the Auroræ seen in the zenith or the upper regions of the sky, and those seen on the horizon or apparently (and no doubt in some cases actually) near the Earth’s surface.</p>
 		<p>The description of the cohorts running to the fire only to find it an Aurora, calls to mind the many similar events happening in our own days. Not, however, but that a mistake may sometimes occur in an opposite direction. <span class="sidenote" data-id="5">A spurious Aurora.</span>“In the memoirs of Baron Stockmar an amusing anecdote is related of one Herr von Radowitz, who was given to making the most of easily picked up information. A friend of the Baron’s went to an evening party near Frankfort, where he expected to meet Herr von Radowitz. On his way he saw a barn burning, stopped his carriage, assisted the people, and waited till the flames were nearly extinguished. When he arrived at his friend’s house he found Herr von Radowitz, who had previously taken the party to the top of the building to see an Aurora, dilating on terrestrial magnetism, electricity, and so forth. Radowitz asked Stockmar’s friend, “Have you seen the beautiful Aurora Borealis?” He replied, “Certainly; I was there myself; it will soon be over.” An explanation followed as to the barn on fire: Radowitz was silent some ten minutes, then took up his hat and quietly disappeared.</p>
 	</section>
-	<section class="backmatter">
+	<section class="backmatter chapter">
 		<h2>Appendix</h2>
 		<p class="runningTitle">Appendix</p>
 		<h4>Table of Figures</h4>
