--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		<p>In Seneca’s ‘Quæstiones Natu&shy;rales,’ Lib. I. c. xiv., we find the following: — “Tempus est, alios quoque ignes<span class="sidenote" data-id="1">Seneca’s ‘Quæstiones Naturales,’ Lib. I. c. xiv.</span> percurrere, quorum diversæ figuræ sunt. Aliquando emicat stella, aliquando ardores sunt, aliquando fixi et hærentes, nonnunquam volubiles. Horum plura genera conspiciantur.</p><p>Sunt <i>Bothynoë</i>&nbsp;<span class="footnote"><span class="greek">βόθυνος</span>, a hollow.</span> Seneca’s ‘Quæst&shy;iones Naturales,’ Lib. I. c. xiv. Description of Auroræ.</span>, quum velut corona cingente introrsus igneus cœli recessus est similis effossæ in orbem speluncæ. Sunt <i>Pithitæ</i>&nbsp;<span class="footnote"><span class="greek">πίθος</span>, a cask.</span>, quum magnitudo vasti rotundique ignis dolio similis, vel fertur vel in uno loco flagrat. Sunt <i>Chasmata</i>&nbsp;<span class="footnote"><span class="greek">χάσμς</span>, a chasm.</span>, quum aliquod cœli spatium desedit, et flammam dehiscens, velut in abdito, ostentat. Colores quoque omnium horum plurimi sunt. Quidam ruboris acerrimi, quidam evanidæ ac levis flammæ, quidam candidæ lucis, quidam micantes, quidam æqualiter et sine eruptionibus aut radiis fulvi.</p>
 		<p>C. xv.<span class="sidenote" data-id="2">Seneca, c. xv.</span> “Inter hæc ponas licet et quod frequenter in historiis legimus, cœlum ardere visum: cujus nonnunquam tam sublimis ardor est ut inter ipsa sidera videatur, nonnunquam tam humilis ut speciem longinqui incendii præbeat.</p>
 		<figure id="figure-1">
-			<img src="img/24176200239_68d47c9139_o.jpg"  alt="Placeholder image"/>
-			<figcaption>Placeholder image</figcaption>
+			<img src="img/24176200239_68d47c9139_o.jpg" title="Rosendaal (Amsterdam)"  alt="Rosendaal (Amsterdam)"/>
+			<figcaption>Rosendaal</figcaption>
 		</figure>
 		<p>“Sub Tiberio Cæsare cohortes in auxilium Ostiensis coloniæ cucurrerunt, tanquam conflagrantis, quum cœli ardor fuisset per magnam partem noctis, parum lucidus crassi fumidique ignis.”</p>
 		<p>We may translate this:<span class="sidenote" data-id="3">Seneca, c. xv.</span>—“It is time other fires also to describe, of which there are diverse forms. “Sometimes a star shines forth; at times there are fire-glows, sometimes fixed and persistent, sometimes flitting. Of these many sorts may be distinguished.</p>
 		<figure id="figure-2">
-			<img src="img/24248107120_71254fef91_o.jpg"  alt="Placeholder image"/>
-			<figcaption>Placeholder image</figcaption>
+			<img src="img/24248107120_71254fef91_o.jpg" title="Trajectum ad Rhenum (Utrecht)"  alt="Trajectum ad Rhenum (Utrecht)"/>
+			<figcaption>Trajectum ad Rhenum</figcaption>
 		</figure>
 		<p>There are Bothynoë, when, as within a surrounding corona, the fiery recess of the sky is like to a cave dug out of space. There are Pithitæ, when the expanse of a vast and rounded fire similar to a tub (dolium) is either carried about or glows in one spot.</p>
 		<p>“There are Chasmata, when a certain portion of the sky opens, and gaping displays the flame as in a porch. The colours also of all these are many. Certain are of the brightest red, some of a flitting and light flame-colour, some of a white light, others shining, some steadily and yellow without eruptions or rays.</p>
@@ -42,8 +42,8 @@
 		<p class="runningTitle">Appendix</p>
 		<h4>Table of Figures</h4>
 		<ul>
-			<li><a class="crossref" href="#figure-1">Figure 1</a></li>
-			<li><a class="crossref" href="#figure-2">Figure 2</a></li>
+			<li><a class="crossref" href="#figure-1"></a></li>
+			<li><a class="crossref" href="#figure-2"></a></li>
 		</ul>
 		<h4>Table of Contents</h4>
 		<ol>
