--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 		<h2>Appendix</h2>
 		<p class="runningTitle">Appendix</p>
 		<h4>Table of Contents</h4>
-		<ol>
+		<ol id="toc">
 			<li><a class="toc" href="#chap-1"></a></li>
 			<li><a class="toc" href="#chap-2"></a></li>
 		</ol>
 		<h4>Table of Figures</h4>
-		<ul>
+		<ul id="tof">
 			<li><a class="crossref" href="#figure-1"></a></li>
 			<li><a class="crossref" href="#figure-2"></a></li>
 		</ul>
