--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 		<p class="runningTitle">Appendix</p>
 		<h4>Table of Contents</h4>
 		<ol id="toc">
-			<li><a class="toc" href="#chap-1"></a></li>
-			<li><a class="toc" href="#chap-2"></a></li>
+			<li><a href="#chap-1"></a></li>
+			<li><a href="#chap-2"></a></li>
 		</ol>
 		<h4>Table of Figures</h4>
 		<ul id="tof">
-			<li><a class="crossref" href="#figure-1"></a></li>
-			<li><a class="crossref" href="#figure-2"></a></li>
+			<li><a href="#figure-1"></a></li>
+			<li><a href="#figure-2"></a></li>
 		</ul>
 		<h4>Index</h4>
 		<div id="index">
