--- a/index.html
+++ b/index.html
@@ -1,65 +1,69 @@
 ﻿<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link href="css/interface-0.1.css" rel="stylesheet" type="text/css">
-	<link href="css/screen.css" rel="stylesheet" type="text/css">
-	<link href="css/print.css" rel="stylesheet"  type="text/css">
-	<script src="js/paged.polyfill.js"></script>
-	<script src="js/customHandler.js"></script>
-</head>
-<body>
-	<section id="chapter-1" class="chapter">
-		<h2 class="chapterTitle" id="chap-1">The <span id="i1">aurora</span> as known to&nbsp;the&nbsp;ancients </h2>
-		<p class="runningTitle">The Aurora</p>
-		<p lang="la">In Seneca’s ‘Quæstiones Naturales’, Lib. I. c. xiv., we find the following: — “Tempus est, alios quoque ignes<a href="#s1" class="sidenode-ref-mark"></a><span id="s1" class="sidenote">Seneca’s ‘Quæstiones Naturales’, Lib. I. c. xiv.</span> percurrere, quorum diversæ figuræ sunt. Aliquando emicat stella, aliquando ardores sunt, aliquando fixi et hærentes, nonnunquam volubiles. Horum plura genera conspiciantur.</p><p>Sunt <i><span id="i13">Bothynoë</span></i><span id="f1" class="footnote"><span class="greek">βόθυνος</span>, a hollow.</span> Seneca’s ‘Quæs&shy;tiones Naturales’, Lib. I. c. xiv. Description of Auroræ</span>, quum velut corona cingente introrsus igneus cœli recessus est similis effossæ in orbem speluncæ.</p><p> Sunt <i><span id="i11">Pithitæ</span></i><span id="f2" class="footnote"><span class="greek">πίθος</span>, a cask.</span>, quum magnitudo vasti rotundique ignis dolio similis, vel fertur vel in uno loco flagrat. Sunt <i><span id="i9">Chasmata</span></i><span id="f3" class="footnote"><span class="greek">χάσμς</span>, a chasm.</span>, quum aliquod cœli spatium desedit, et flammam dehiscens, velut in abdito, ostentat. Colores quoque omnium horum plurimi sunt. Quidam ruboris acerrimi, quidam evanidæ ac levis flammæ, quidam candidæ lucis, quidam micantes, quidam æqualiter et sine eruptionibus aut radiis fulvi.</p>
-		<p lang="la">C. xv.<a href="#s2" class="sidenode-ref-mark"></a><span id="s2" class="sidenote">Seneca, c. xv.</span> “Inter hæc ponas licet et quod frequenter in historiis legimus, cœlum ardere visum: cujus nonnunquam tam sublimis ardor est ut inter ipsa sidera videatur, nonnunquam tam humilis ut speciem longinqui incendii præbeat.</p>
-		<figure id="figure-1">
-			<img src="img/24176200239_68d47c9139_o.jpg" title="Rosendaal (Amsterdam)"  alt="Rosendaal (Amsterdam)"/>
-			<figcaption>Rosendaal</figcaption>
-		</figure>
-		<p lang="la">“Sub Tiberio Cæsare cohortes in auxilium Ostiensis coloniæ cucurrerunt, tanquam conflagrantis, quum cœli ardor fuisset per magnam partem noctis, parum lucidus crassi fumidique ignis.”</p>
-		<p>We may translate this:<a href="#s3" class="sidenode-ref-mark"></a><span id="s3" class="sidenote">Seneca, c. xv.</span> — “It is time other fires also to describe, of which there are diverse forms. “Sometimes a star shines forth; at times there are fire-glows, sometimes fixed and persistent, sometimes flitting. Of these many sorts may be distinguished.</p>
-		<figure id="figure-2">
-			<img src="img/24248107120_71254fef91_o.jpg" title="Trajectum ad Rhenum (Utrecht)"  alt="Trajectum ad Rhenum (Utrecht)"/>
-			<figcaption>Trajectum ad Rhenum</figcaption>
-		</figure>
-		<p>There are <span id="i14">Bothynoë</span>, when, as within a surrounding corona, the fiery recess of the sky is like to a cave dug out of space. There are <span id="i12">Pithitæ</span>, when the expanse of a vast and rounded fire similar to a tub (dolium) is either carried about or glows in one spot.</p>
-		<p>“There are <span id="i10">Chasmata</span>, when a certain portion of the sky opens, and gaping displays the flame as in a porch. The colours also of all these are many. Certain are of the brightest red, some of a flitting and light flame-colour, some of a white light, others shining, some steadily and yellow without eruptions or rays.</p>
-	</section>
-	<section id="chapter-2" class="chapter">
-		<h2 class="chapterTitle" id="chap-2">The colony of <span id="i15">Ostia</span></h2>
-		<p class="runningTitle">The colony of Ostia</p>
-		<p>“Amongst these we may notice, what we frequently read of in history, the sky is seen to burn, the glow of which is occasionally so high that it may be seen amongst the stars themselves, sometimes so near the Earth (humilis) that it assumes the form of a distant fire.</p>
-		<p>Under <span id="i22">Tiberius</span> Cæsar the cohorts ran together in aid of the colony of Ostia as if it were in flames, when the glowing of the sky lasted through a great part of the night, shining dimly like a vast and smoking fire.”</p>
-		<p>From the above passages many striking particulars of the <span id="i2">Aurora</span> may be gathered; and by the division of the forms of Aurora into classes it is evident they were, at that period, the subject of frequent observation. The expression<a href="#s4" class="sidenode-ref-mark"></a><span id="s4" class="sidenote"> Auroræ frequently read of in history.</span> “et quod frequenter in historiis legimus” shows, too, that the phenomena of Auroral displays were a matter of record and discussion with the writers of the day.</p>
-		<p>Various forms of Aurora may be recognized in the passages from Chap. xiv.; while in those from Chap. xv. a careful distinction is drawn between the Auroræ seen in the zenith or the upper regions of the sky, and those seen on the horizon or apparently (and no doubt in some cases actually) near the Earth’s surface.</p>
-		<p>The description of the cohorts running to the fire only to find it an <span id="i5">Aurora</span>, calls to mind the many similar events happening in our own days. Not, however, but that a mistake may sometimes occur in an opposite direction.<a href="#s5" class="sidenode-ref-mark"></a><span id="s5" class="sidenote">A spurious <span id="i6">Aurora</span>.</span> “In the memoirs of Baron Stockmar an amusing anecdote is related of one Herr von <span id="i17">Radowitz</span>, who was given to making the most of easily picked up information. A friend of the Baron’s went to an evening party near Frankfort, where he expected to meet Herr von Radowitz. On his way he saw a barn burning, stopped his carriage, assisted the people, and waited till the flames were nearly extinguished. When he arrived at his friend’s house he found Herr von <span id="i19">Radowitz</span>, who had previously taken the party to the top of the building to see an Aurora, dilating on terrestrial magnetism, electricity, and so forth. Radowitz asked Stockmar’s friend, “Have you seen the beautiful <span id="i7">Aurora</span> Borealis?” He replied, “Certainly; I was there myself; it will soon be over.” An explanation followed as to the barn on fire: Radowitz was silent some ten minutes, then took up his hat and quietly disappeared.</p>
-	</section>
-	<section id="appendix" class="backmatter">
-		<h2>Appendix</h2>
-		<p class="runningTitle">Appendix</p>
-		<h3>Table of Contents</h4>
-		<ol id="toc">
-			<li><a href="#chap-1"></a></li>
-			<li><a href="#chap-2"></a></li>
-		</ol>
-		<h3>Table of Figures</h4>
-		<ul id="tof">
-			<li><a href="#figure-1"></a></li>
-			<li><a href="#figure-2"></a></li>
-		</ul>
-		<h3>Index</h4>
-		<div id="index">
-			<p>Aurora<a href="#i1"></a><a href="#i2"></a></a><a href="#i5"></a><a href="#i7"></a></p>
-			<p>Chasmata <a href="#i9"></a><a href="#i10"></a></p>
-			<p>Pithitæ <a href="#i11"></a><a href="#i12"></a></p>
-			<p>Bothynoë <a href="#i13"></a><a href="#i14"></a></p>
-			<p>Ostia <a href="#i15"></a></p>
-			<p>Radowitz <a href="#i17"></a><a href="#i19"></a></p>
-			<p>Tiberius <a href="#i22"></a></p>
-		</div>
-	</section>
-</body>
+	<head profile="http://dublincore.org/documents/dcq-html/">
+		<meta charset="UTF-8">
+		<title>Document</title>
+		<link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
+		<link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
+		<meta name="DC.publisher" content="Roland Dreger" />
+		<meta name="DC.subject" content="paged.polyfill.js example" />
+		<meta name="DC.creator" content="Roland Dreger" />
+		<link href="css/interface-0.1.css" rel="stylesheet" type="text/css">
+		<link href="css/screen.css" rel="stylesheet" type="text/css">
+		<link href="css/print.css" rel="stylesheet"  type="text/css">
+		<script src="js/paged.polyfill.js"></script>
+		<script src="js/customHandler.js"></script>
+	</head>
+	<body>
+		<section id="chapter-1" class="chapter">
+			<h2 class="chapterTitle" id="chap-1">The <span id="i1">aurora</span> as known to&nbsp;the&nbsp;ancients </h2>
+			<p class="runningTitle">The Aurora</p>
+			<p lang="la">In Seneca’s ‘Quæstiones Naturales’, Lib. I. c. xiv., we find the following: — “Tempus est, alios quoque ignes<a href="#s1" class="sidenode-ref-mark"></a><span id="s1" class="sidenote">Seneca’s ‘Quæstiones Naturales’, Lib. I. c. xiv.</span> percurrere, quorum diversæ figuræ sunt. Aliquando emicat stella, aliquando ardores sunt, aliquando fixi et hærentes, nonnunquam volubiles. Horum plura genera conspiciantur.</p><p>Sunt <i><span id="i13">Bothynoë</span></i><span id="f1" class="footnote"><span class="greek">βόθυνος</span>, a hollow.</span> Seneca’s ‘Quæs&shy;tiones Naturales’, Lib. I. c. xiv. Description of Auroræ</span>, quum velut corona cingente introrsus igneus cœli recessus est similis effossæ in orbem speluncæ.</p><p> Sunt <i><span id="i11">Pithitæ</span></i><span id="f2" class="footnote"><span class="greek">πίθος</span>, a cask.</span>, quum magnitudo vasti rotundique ignis dolio similis, vel fertur vel in uno loco flagrat. Sunt <i><span id="i9">Chasmata</span></i><span id="f3" class="footnote"><span class="greek">χάσμς</span>, a chasm.</span>, quum aliquod cœli spatium desedit, et flammam dehiscens, velut in abdito, ostentat. Colores quoque omnium horum plurimi sunt. Quidam ruboris acerrimi, quidam evanidæ ac levis flammæ, quidam candidæ lucis, quidam micantes, quidam æqualiter et sine eruptionibus aut radiis fulvi.</p>
+			<p lang="la">C. xv.<a href="#s2" class="sidenode-ref-mark"></a><span id="s2" class="sidenote">Seneca, c. xv.</span> “Inter hæc ponas licet et quod frequenter in historiis legimus, cœlum ardere visum: cujus nonnunquam tam sublimis ardor est ut inter ipsa sidera videatur, nonnunquam tam humilis ut speciem longinqui incendii præbeat.</p>
+			<figure id="figure-1">
+				<img src="img/24176200239_68d47c9139_o.jpg" title="Rosendaal (Amsterdam)"  alt="Rosendaal (Amsterdam)"/>
+				<figcaption>Rosendaal</figcaption>
+			</figure>
+			<p lang="la">“Sub Tiberio Cæsare cohortes in auxilium Ostiensis coloniæ cucurrerunt, tanquam conflagrantis, quum cœli ardor fuisset per magnam partem noctis, parum lucidus crassi fumidique ignis.”</p>
+			<p>We may translate this:<a href="#s3" class="sidenode-ref-mark"></a><span id="s3" class="sidenote">Seneca, c. xv.</span> — “It is time other fires also to describe, of which there are diverse forms. “Sometimes a star shines forth; at times there are fire-glows, sometimes fixed and persistent, sometimes flitting. Of these many sorts may be distinguished.</p>
+			<figure id="figure-2">
+				<img src="img/24248107120_71254fef91_o.jpg" title="Trajectum ad Rhenum (Utrecht)"  alt="Trajectum ad Rhenum (Utrecht)"/>
+				<figcaption>Trajectum ad Rhenum</figcaption>
+			</figure>
+			<p>There are <span id="i14">Bothynoë</span>, when, as within a surrounding corona, the fiery recess of the sky is like to a cave dug out of space. There are <span id="i12">Pithitæ</span>, when the expanse of a vast and rounded fire similar to a tub (dolium) is either carried about or glows in one spot.</p>
+			<p>“There are <span id="i10">Chasmata</span>, when a certain portion of the sky opens, and gaping displays the flame as in a porch. The colours also of all these are many. Certain are of the brightest red, some of a flitting and light flame-colour, some of a white light, others shining, some steadily and yellow without eruptions or rays.</p>
+		</section>
+		<section id="chapter-2" class="chapter">
+			<h2 class="chapterTitle" id="chap-2">The colony of <span id="i15">Ostia</span></h2>
+			<p class="runningTitle">The colony of Ostia</p>
+			<p>“Amongst these we may notice, what we frequently read of in history, the sky is seen to burn, the glow of which is occasionally so high that it may be seen amongst the stars themselves, sometimes so near the Earth (humilis) that it assumes the form of a distant fire.</p>
+			<p>Under <span id="i22">Tiberius</span> Cæsar the cohorts ran together in aid of the colony of Ostia as if it were in flames, when the glowing of the sky lasted through a great part of the night, shining dimly like a vast and smoking fire.”</p>
+			<p>From the above passages many striking particulars of the <span id="i2">Aurora</span> may be gathered; and by the division of the forms of Aurora into classes it is evident they were, at that period, the subject of frequent observation. The expression<a href="#s4" class="sidenode-ref-mark"></a><span id="s4" class="sidenote"> Auroræ frequently read of in history.</span> “et quod frequenter in historiis legimus” shows, too, that the phenomena of Auroral displays were a matter of record and discussion with the writers of the day.</p>
+			<p>Various forms of Aurora may be recognized in the passages from Chap. xiv.; while in those from Chap. xv. a careful distinction is drawn between the Auroræ seen in the zenith or the upper regions of the sky, and those seen on the horizon or apparently (and no doubt in some cases actually) near the Earth’s surface.</p>
+			<p>The description of the cohorts running to the fire only to find it an <span id="i5">Aurora</span>, calls to mind the many similar events happening in our own days. Not, however, but that a mistake may sometimes occur in an opposite direction.<a href="#s5" class="sidenode-ref-mark"></a><span id="s5" class="sidenote">A spurious <span id="i6">Aurora</span>.</span> “In the memoirs of Baron Stockmar an amusing anecdote is related of one Herr von <span id="i17">Radowitz</span>, who was given to making the most of easily picked up information. A friend of the Baron’s went to an evening party near Frankfort, where he expected to meet Herr von Radowitz. On his way he saw a barn burning, stopped his carriage, assisted the people, and waited till the flames were nearly extinguished. When he arrived at his friend’s house he found Herr von <span id="i19">Radowitz</span>, who had previously taken the party to the top of the building to see an Aurora, dilating on terrestrial magnetism, electricity, and so forth. Radowitz asked Stockmar’s friend, “Have you seen the beautiful <span id="i7">Aurora</span> Borealis?” He replied, “Certainly; I was there myself; it will soon be over.” An explanation followed as to the barn on fire: Radowitz was silent some ten minutes, then took up his hat and quietly disappeared.</p>
+		</section>
+		<section id="appendix" class="backmatter">
+			<h2>Appendix</h2>
+			<p class="runningTitle">Appendix</p>
+			<h3>Table of Contents</h4>
+			<ol id="toc">
+				<li><a href="#chap-1"></a></li>
+				<li><a href="#chap-2"></a></li>
+			</ol>
+			<h3>Table of Figures</h4>
+			<ul id="tof">
+				<li><a href="#figure-1"></a></li>
+				<li><a href="#figure-2"></a></li>
+			</ul>
+			<h3>Index</h4>
+			<div id="index">
+				<p>Aurora<a href="#i1"></a><a href="#i2"></a></a><a href="#i5"></a><a href="#i7"></a></p>
+				<p>Chasmata <a href="#i9"></a><a href="#i10"></a></p>
+				<p>Pithitæ <a href="#i11"></a><a href="#i12"></a></p>
+				<p>Bothynoë <a href="#i13"></a><a href="#i14"></a></p>
+				<p>Ostia <a href="#i15"></a></p>
+				<p>Radowitz <a href="#i17"></a><a href="#i19"></a></p>
+				<p>Tiberius <a href="#i22"></a></p>
+			</div>
+		</section>
+	</body>
 </html>
